--- a/index.html
+++ b/index.html
@@ -1,66 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yaya</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <header class="parteuno">
-        <img class="parteuno-img" src="./img/logoc.png" alt="">
-    </header>
-    <nav class="navl">
-        <ul class="navl-ul">
-            <li class="navl-ul--li"><a href="" class="lia">Recetas</a></li>
-            <li class="navl-ul--li"><a href="" class="lia">Galeria</a></li>
-            <li class="navl-ul--li"><a href="" class="lia">Eventos</a></li>
-            <li class="navl-ul--li"><a href="" class="lia">Contacto</a></li>
-        </ul>
-    </nav>
-    <main class="container"> 
-        <div class="cp">
-            <div class="tarjeta">
-                <div class="tarjeta-container">
-                    <img class="tarjeta-img" src="./img/bunuelo.jpeg" alt="">
-                    <h4 class="tarjeta-h4">Buñuelos</h4>
-                </div> 
-            </div>
-            <div class="tarjeta">
-                <div class="tarjeta-container">
-                    <img class="tarjeta-img" src="./img/carbonara.jpeg" alt="">
-                    <h4 class="tarjeta-h4">Pasta Carbanora</h4>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Yaya</title>
+        <link rel="stylesheet" href="./style.css">
+    </head>
+    <body>
+        <header class="parteuno">
+            <img class="parteuno-img" src="./img/logoc.png" alt="">
+        </header>
+        <nav class="navl">
+            <ul class="navl-ul">
+                <li class="navl-ul--li">
+                    <a href="" class="lia">Recetas</a>
+                </li>
+                <li class="navl-ul--li">
+                    <a href="" class="lia">Galeria</a>
+                </li>
+                <li class="navl-ul--li">
+                    <a href="" class="lia">Eventos</a>
+                </li>
+                <li class="navl-ul--li">
+                    <a href="" class="lia">Contacto</a>
+                </li>
+            </ul>
+        </nav>
+        <main class="container"> 
+            <div class="cp">
+                <div class="tarjeta">
+                    <div class="tarjeta-container">
+                        <img class="tarjeta-img" src="./img/bunuelo.jpeg" alt="">
+                        <h4 class="tarjeta-h4">Buñuelos</h4>
+                    </div> 
+                </div>
+                <div class="tarjeta">
+                    <div class="tarjeta-container">
+                        <img class="tarjeta-img" src="./img/carbonara.jpeg" alt="">
+                        <h4 class="tarjeta-h4">Pasta Carbanora</h4>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <div class="tarjeta-container">
+                        <img class="tarjeta-img" src="./img/lasana.jpeg" alt="">
+                        <h4 class="tarjeta-h4">Lasaña</h4>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <div class="tarjeta-container">
+                        <img class="tarjeta-img" src="./img/macarrones.jpeg" alt="">
+                        <h4 class="tarjeta-h4">Macarrones</h4>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <div class="tarjeta-container">
+                        <img class="tarjeta-img" src="./img/pavo.jpeg" alt="">
+                        <h4 class="tarjeta-h4">Pavo</h4>
+                    </div>
+                </div>
+                <div class="tarjeta">
+                    <div class="tarjeta-container">
+                        <img class="tarjeta-img" src="./img/coles.jpeg" alt="">
+                        <h4 class="tarjeta-h4">Coles de Brucelas</h4>
+                    </div>
                 </div>
             </div>
-            <div class="tarjeta">
-                <div class="tarjeta-container">
-                    <img class="tarjeta-img" src="./img/lasana.jpeg" alt="">
-                    <h4 class="tarjeta-h4">Lasaña</h4>
-                </div>
-            </div>
-            <div class="tarjeta">
-                <div class="tarjeta-container">
-                    <img class="tarjeta-img" src="./img/macarrones.jpeg" alt="">
-                    <h4 class="tarjeta-h4">Macarrones</h4>
-                </div>
-            </div>
-            <div class="tarjeta">
-                <div class="tarjeta-container">
-                    <img class="tarjeta-img" src="./img/pavo.jpeg" alt="">
-                    <h4 class="tarjeta-h4">Pavo</h4>
-                </div>
-            </div>
-            <div class="tarjeta">
-                <div class="tarjeta-container">
-                    <img class="tarjeta-img" src="./img/coles.jpeg" alt="">
-                    <h4 class="tarjeta-h4">Coles de Brucelas</h4>
-                </div>
-            </div>
-        </div>
-    </main>
-</body>
-<footer class="partedos">
-   <img class="partedos-img" src="./img/redes.png" alt=""> 
-</footer>
+        </main>
+        <footer class="partedos">
+            <img class="partedos-img" src="./img/redes.png" alt=""> 
+        </footer>  
+    </body>
 </html>
